# dj_tylko

./: .coveragerc  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: urls.py
api/v1/: urls.py
api/v1/cart/: serializers.py  urls.py
api/v1/cart/endpoints/: __init__.py  viewset.py
api/v1/order/: serializers.py  urls.py
api/v1/order/endpoints/: __init__.py  viewset.py
api/v1/shelf/: serializers.py  urls.py
api/v1/shelf/endpoints/: __init__.py  viewset.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/utils/: openapi_schema.py
modules/cart/: admin.py  models.py
modules/cart/migrations/: 0001_initial.py  0002_alter_cart_status.py
modules/cart/utils/: enums.py
modules/order/: admin.py  apps.py  models.py
modules/order/migrations/: 0001_initial.py
modules/order/utils/: enums.py
modules/shelf/: admin.py  apps.py  models.py
modules/shelf/migrations/: 0001_initial.py
modules/user/: admin.py  models.py
modules/user/migrations/: 0001_initial.py
